--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ et_xmlfile==2.0.0
 numpy==2.3.2
 openpyxl==3.1.5
 pandas==2.3.1
+plotly==6.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
