--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-et_xmlfile==2.0.0
-numpy==2.3.2
-openpyxl==3.1.5
-pandas==2.3.1
-plotly==6.3.0
-python-dateutil==2.9.0.post0
-pytz==2025.2
-six==1.17.0
-tzdata==2025.2
-xlrd==2.0.2
+# Core requirements for the Streamlit dashboard
+streamlit>=1.28.0
+pandas>=2.3.1
+openpyxl>=3.1.5
+xlsxwriter>=3.0.3
+numpy>=2.3.2
+plotly>=6.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Additional utilities
+python-dateutil>=2.9.0
+pytz>=2025.2
+et_xmlfile>=2.0.0
+xlrd>=2.0.2
+six>=1.17.0
+tzdata>=2025.2
+
+# AWS S3 support
+boto3>=1.26.0
+python-dotenv>=0.19.0
+
+# AWS CDK (for deployment only)
+aws-cdk-lib==2.100.0
+constructs>=10.0.0,<11.0.0
