--- a/.ebextensions/options.config
+++ b/.ebextensions/options.config
@@ -1,5 +1,5 @@
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-    PORT: '8501'
   aws:elasticbeanstalk:container:python:
     WSGIPath: app:main
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
