Fix: Add EB configuration and __init__.py files for proper module imports

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,12 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: app:main
+    WSGIPath: app.py
+  aws:elasticbeanstalk:application:environment:
+    PYTHONPATH: "/var/app/current:$PYTHONPATH"
+    CDN_BASE_URL: "https://arcan-dashboard-data-dev-408312670144.s3.amazonaws.com/logos"
+
+commands:
+  01_pip_upgrade:
+    command: "pip install --upgrade pip"
+  02_install_requirements:
+    command: "pip install -r requirements.txt"
